# logic_python2sympy

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  transformer.py
logic_python2sympy/: __init__.py  main.py  transformer.py
tests/: test_convert.py  test_get_expression.py
