[tool.poetry]
name = "logic-python2sympy"
version = "0.1.2"
description = "convert a logical expression written in `Python` syntax, into a `Sympy` expression"
authors = ["Telessia <dunty.telessia@gmail.com>"]
license = "MIT"
repository = "https://github.com/duntytelessia/logic_python2sympy/"
readme = "README.md"
keywords = ["logical expression", "sympy"]

[tool.poetry.dependencies]
python = "^3.12"
astor = "^0.8.1"
sympy = "^1.13.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
